<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>compas_rrc_driver</name>
  <version>1.1.3</version>
  <description>COMPAS RRC: ROS Driver</description>

  <maintainer email="casas@arch.ethz.ch">Gonzalo Casas</maintainer>
  <maintainer email="fleischmann@arch.ethz.ch">Philippe Fleischmann</maintainer>
  <maintainer email="lyrenmann@arch.ethz.ch">Michael Lyrenmann</maintainer>
  <maintainer email="tetov@abm.lth.se">Anton Tetov</maintainer>

  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>compas_rrc_ros_interfaces</depend>

  <exec_depend>python3-requests</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
